bin_PROGRAMS=sudoku
sudoku_SOURCES= boxlinereduction.cpp \
boxlinereduction.hpp \
forcingchain.cpp \
forcingchain.hpp \
grid.cpp \
grid.hpp \
hiddendouble.cpp \
hiddendouble.hpp \
hiddentriple.cpp \
hiddentriple.hpp \
hintconsumer.cpp \
hintconsumer.hpp \
hint.hpp \
pointing.cpp \
pointing.hpp \
range.cpp \
range.hpp \
singlehint.cpp \
singlehint.hpp \
sudoku.cpp \
util.hpp \
xwing.cpp \
xwing.hpp \
nakeddouble.hpp \
nakeddouble.cpp \
claiming.hpp \
claiming.cpp


