bin_PROGRAMS=sudoku dancinglinks

sudoku_SOURCES= boxlinereduction.cpp \
boxlinereduction.hpp \
simpleforcing.hpp \
simpleforcing.cpp \
forcingchain.cpp \
forcingchain.hpp \
grid.cpp \
grid.hpp \
hiddendouble.cpp \
hiddendouble.hpp \
hiddentriple.cpp \
hiddentriple.hpp \
hintconsumer.cpp \
hintconsumer.hpp \
hint.hpp \
pointing.cpp \
pointing.hpp \
range.cpp \
range.hpp \
singlehint.cpp \
singlehint.hpp \
sudoku.cpp \
util.hpp \
xwing.cpp \
xwing.hpp \
nakeddouble.hpp \
nakeddouble.cpp \
claiming.hpp \
claiming.cpp \
swordfish.hpp \
swordfish.cpp \
xywing.hpp \
xywing.cpp

dancinglinks_SOURCES=dlxsolver.hpp \
dlxsolver.cpp \
dancinglinks.hpp \
dancinglinks.cpp \
grid.cpp \
grid.hpp \
range.cpp \
range.hpp \
util.hpp 
