bin_PROGRAMS=gsudoku sudoku dancinglinks

sudoku_SOURCES= boxlinereduction.cpp \
boxlinereduction.hpp \
forcingchain.cpp \
forcingchain.hpp \
grid.cpp \
grid.hpp \
hiddendouble.cpp \
hiddendouble.hpp \
hiddentriple.cpp \
hiddentriple.hpp \
hintconsumer.cpp \
hintconsumer.hpp \
hint.cpp \
hint.hpp \
pointing.cpp \
pointing.hpp \
range.cpp \
range.hpp \
singlehint.cpp \
singlehint.hpp \
sudoku.cpp \
util.hpp \
xwing.cpp \
xwing.hpp \
nakeddouble.hpp \
nakeddouble.cpp \
nakedsingle.hpp \
nakedsingle.cpp \
claiming.hpp \
claiming.cpp \
swordfish.hpp \
swordfish.cpp \
xywing.hpp \
xywing.cpp \
indirecthint.cpp \
indirecthint.hpp 

dancinglinks_SOURCES= dlxmain.cpp \
dlxsolver.hpp \
dlxsolver.cpp \
dancinglinks.hpp \
dancinglinks.cpp \
grid.cpp \
grid.hpp \
range.cpp \
range.hpp \
util.hpp 

gsudoku_SOURCES= \
boxlinereduction.cpp \
boxlinereduction.hpp \
claiming.cpp \
claiming.hpp \
commands.cpp \
commands.hpp \
dancinglinks.cpp \
dancinglinks.hpp \
dlxsolver.cpp \
dlxsolver.hpp \
forcingchain.cpp \
forcingchain.hpp \
gridchecker.cpp \
gridchecker.hpp \
grid.cpp \
grid.hpp \
gsudoku.cpp \
hiddendouble.cpp \
hiddendouble.hpp \
hiddentriple.cpp \
hiddentriple.hpp \
hintconsumer.cpp \
hintconsumer.hpp \
hint.cpp \
hint.hpp \
hintview.cpp \
hintview.hpp \
indirecthint.cpp \
indirecthint.hpp \
mainwindow.cpp \
mainwindow.hpp \
nakeddouble.cpp \
nakeddouble.hpp \
nakedsingle.cpp \
nakedsingle.hpp \
pointing.cpp \
pointing.hpp \
range.cpp \
range.hpp \
singlehint.cpp \
singlehint.hpp \
statusview.cpp \
statusview.hpp \
sudokugenerator.cpp \
sudokugenerator.hpp \
sudokumodel.cpp \
sudokumodel.hpp \
sudokusolver.cpp \
sudokusolver.hpp \
sudokuview.cpp \
sudokuview.hpp \
swordfish.cpp \
swordfish.hpp \
util.hpp \
xwing.cpp \
xwing.hpp \
xywing.cpp \
xywing.hpp 

AM_CXXFLAGS=-Wall @GTKMM_CFLAGS@
gsudoku_LDADD=@LIBS@ @GTKMM_LIBS@
datadir = @datadir@
localedir = $(datadir)/locale
DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@

