bin_PROGRAMS=sudoku dancinglinks

sudoku_SOURCES= boxlinereduction.cpp \
boxlinereduction.hpp \
forcingchain.cpp \
forcingchain.hpp \
grid.cpp \
grid.hpp \
hiddendouble.cpp \
hiddendouble.hpp \
hiddentriple.cpp \
hiddentriple.hpp \
hintconsumer.cpp \
hintconsumer.hpp \
hint.cpp \
hint.hpp \
pointing.cpp \
pointing.hpp \
range.cpp \
range.hpp \
singlehint.cpp \
singlehint.hpp \
sudoku.cpp \
util.hpp \
xwing.cpp \
xwing.hpp \
nakeddouble.hpp \
nakeddouble.cpp \
nakedsingle.hpp \
nakedsingle.cpp \
claiming.hpp \
claiming.cpp \
swordfish.hpp \
swordfish.cpp \
xywing.hpp \
xywing.cpp \
indirecthint.cpp \
indirecthint.hpp 

dancinglinks_SOURCES= dlxmain.cpp \
dlxsolver.hpp \
dlxsolver.cpp \
dancinglinks.hpp \
dancinglinks.cpp \
grid.cpp \
grid.hpp \
range.cpp \
range.hpp \
util.hpp 
